sec-groups/secgroups.tf
resource "aws_security_group" "allow-http" {
  name        = "${var.project}-allow-http"
  description = "Enable HTTP Access"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP Access"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "allow-ssh" {
  name        = "${var.project}-allow-ssh"
  description = "Enable SSH Access"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH Access"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

variable "project" {
  type        = string
  description = "Project name"
  default     = "my-project"
}

variable "vpc_id" {
  type        = string
}

output "allow_ssh_id" {
  value = aws_security_group.allow-ssh.id
}

output "allow_http_id" {
  value = aws_security_group.allow-http.id
}
